--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next"
+    "dev": "next",
+    "build": "next build"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +18,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
