--- a/prepare/front/.eslintrc
+++ b/prepare/front/.eslintrc
@@ -1,9 +1,15 @@
 {
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module",
+    "requireConfigFile": false,
     "ecmaFeatures": {
-      "jsx": true
+      "jsx": true,
+      "globalReturn": false
+    },
+    "babelOptions": {
+      "presets": ["@babel/preset-react"]
     }
   },
   "env": {
@@ -12,14 +18,25 @@
     "es6": true
   },
   "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended"
+    "airbnb"
+//    "react-app"
   ],
   "plugins": [
     "import",
     "react-hooks"
   ],
   "rules": {
-
+    "jsx-a11y/label-has-associated-control": "off",
+    "jsx-a11y/anchor-is-valid": "off",
+    "no-console": "off",
+    "no-underscore-dangle": "off",
+    "react/forbid-prop-types": "off",
+    "react/jsx-filename-extension": "off",
+    "react/jsx-one-expression-per-line": "off",
+    "object-curly-newline": "off",
+    "linebreak-style": "off",
+    "no-param-reassign": "off",
+    "indent": "off",
+    "quotes": "off"
   }
 }
