--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -27,8 +27,13 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "eslint": "^8.33.0",
+    "@babel/core": "^7.20.12",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
+    "eslint": "^8.34.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0"
   }
