--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.1.7",
     "axios": "^1.3.2",
+    "immer": "^9.0.19",
     "next": "^12.3.4",
     "next-redux-wrapper": "^8.1.0",
     "prop-types": "^15.8.1",
@@ -24,6 +25,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.2.2",
     "redux-thunk": "^2.4.2",
+    "shortid": "^2.2.16",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
