--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -7,7 +7,7 @@
     "dev": "next",
     "build": "next build"
   },
-  "author": "",
+  "author": "BigOne",
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
@@ -32,6 +32,7 @@
     "@babel/core": "^7.20.12",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
+    "@faker-js/faker": "^7.6.0",
     "eslint": "^8.34.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
