--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.1.7",
     "axios": "^1.3.2",
+    "bcrypt": "^5.1.0",
     "immer": "^9.0.19",
     "next": "^12.3.4",
     "next-redux-wrapper": "^8.1.0",
